--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,12 +24,14 @@ categories = ["config", "web-programming", "development-tools", "Asynchronous", 
 
 [workspace.dependencies]
 chrono = { version = "0.4.31" }
-base64 = "0.21"
+base64 = "0.22.0"
+bs58 = "0.5.0"
 bytes = "1"
 bcrypt = "0.15.0"
 jieba-rs = { version = "0.6", features = ["tfidf", "textrank"] }
-salvo = { version = "0.65", features = ["default", "logging"] }
+salvo = { version = "0.66.1", features = ["default", "logging"] }
 serde = { version = "1.0.188", features = [] }
+sha2 = "0.10.8"
 shortlink-core = { path = "./crates/core" }
 shortlink-console = { path = "./crates/console" }
 shortlink-front = { path = "./crates/front" }
