--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -15,3 +15,5 @@ categories.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+sha2.workspace = true
+bs58.workspace = true
